Add install button, fix responsive breaks, update tailwind, workbox fix

--- a/_includes/filter.html
+++ b/_includes/filter.html
@@ -1,6 +1,6 @@
 <div x-data="{ showFilter: false, showVariation: false, showSoulType: false }" class="relative place-content-center">
     <div x-show="showFilter" x-transition.duration.350ms class="origin-top-right absolute right-3 top-16 md:top-24 bg-amber-50 mt-2 h-fit w-36 py-3 px-1 rounded-md shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none transition-opacity duration-300">
-        <div><input type="checkbox" @click="filter.all = !filter.all" id="Character" checked><label for="Character">All</label></div>
+        <div><input type="checkbox" @click="filter.all = !filter.all" id="All" checked><label for="All">All</label></div>
         <div class="flex">
             <svg xmlns="http://www.w3.org/2000/svg" alt="Variation toggle"
                 @click="showVariation = !showVariation" :class="{ 'rotate-90': showVariation }"
@@ -47,7 +47,7 @@
     <button>
         <svg xmlns="http://www.w3.org/2000/svg" alt="Filter toggle" viewBox="0 0 24 24"
         @click="showFilter = !showFilter"
-        class="h-14 w-14 stroke-1 stroke-slate-400 fill-slate-200 hover:fill-kip-red active:fill-kip-drk-sienna">
+        class="h-14 w-14 stroke-1 stroke-slate-400 fill-slate-200 hover:fill-kip-red hover:stroke-kip-drk-sienna active:fill-kip-drk-sienna">
             <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
         </svg>
     </button>
