--- a/_includes/pwa_install_button.html
+++ b/_includes/pwa_install_button.html
@@ -8,7 +8,7 @@
     deferredPrompt = e;
     });
 
-    document.querySelector('#myInstallButton').addEventListener('click', () => {
+    document.querySelector('#installButton').addEventListener('click', () => {
     // Check if the deferred prompt isn't null, then show the prompt
     if (deferredPrompt) {
         deferredPrompt.prompt();
@@ -23,8 +23,17 @@
         });
     } else {
         // If the user clicks the button when they're not in a state to install, just show them a message saying they'll need to click the "install" button when ready.
-        alert('You can\'t install yet. Please click the button again when you are!');
+        alert('You are unable to install the Kipukas web app at this time. This is probably our fault. We will work on fixing it. If you come back later and still experiance issues, please reach out and let us know.');
     }
     });
     
 </script>
+<div class="place-content-center">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+        alt="install pwa icon" id="installButton"
+        class="h-14 w-14 stroke-2 fill-none stroke-kip-goldenrod hover:stroke-kip-red active:stroke-kip-drk-sienna">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+    </svg>
+</div>
+
+  
