--- a/_includes/search_bar_link.html
+++ b/_includes/search_bar_link.html
@@ -6,9 +6,10 @@
     </svg>
   </a>
 
-  <div class="flex flex-auto">
+  <div class="hidden sm:flex flex-auto">
     <a href="./search.html" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md">
       <span class="text-gray-400 whitespace-nowrap hidden md:block">Search Binder</span>
+      <!--<span class="text-gray-400 whitespace-nowrap md:hidden">Search</span>-->
       <span class="text-gray-400 whitespace-nowrap md:hidden">Search</span>
     </a>
   </div>
