Fix qr scanner to defer

--- a/_includes/qr_modal.html
+++ b/_includes/qr_modal.html
@@ -9,7 +9,7 @@
       <h2 class="text-xl font-semibold mb-4">Privacy Notice</h2>
       <p class="mb-4 text-kip-drk-sienna">
         By allowing camera access to our QR code scanner, you agree to our
-        <a href="/privacy_policy" class="text-kip-red hover:text-emerald-600" @click="showModal = false">privacy policy</a>.
+        <a href="/privacy_policy" class="text-kip-red hover:text-emerald-600 underline" @click="showModal = false">privacy policy</a>.
          Breath easy, we don't collect any data.
       </p>
 
