Finalize changes for lighthouse audits

--- a/_includes/qr_scanner.html
+++ b/_includes/qr_scanner.html
@@ -6,4 +6,4 @@
   x-show="showScanner && !noCamera && videoReady">
 </video>
 
-<script defer src="./assets/js-wasm/qr_scanner.js"></script>
+<script defer src="/assets/js-wasm/qr_scanner.js"></script>
