--- a/_includes/qr_button.html
+++ b/_includes/qr_button.html
@@ -1,4 +1,4 @@
-<button aria-label="open QR Scanner">
+<button aria-label="Toggle QR Scanner">
   <svg xmlns="http://www.w3.org/2000/svg"
     @click="{{ site.data.templates.qr-click }}" viewBox="0 0 128 128" alt="QR Scanner Toggle"
     class="h-14 w-14 fill-kip-goldenrod hover:fill-kip-red active:fill-kip-drk-sienna">
