--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ "/assets/css/output.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/output.css' | relative_url }}">
     <link rel="manifest" href="/manifest.json">
+    
     <!--favicon code realfavicongenerator.net-->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -18,6 +19,7 @@
     <meta name="application-name" content="Kipukas">
     <meta name="msapplication-TileColor" content="#9b2c2c">
     <meta name="theme-color" content="#9b2c2c">
+
     <!--favicon code progressier.com-->
     <link rel="apple-touch-startup-image" media="screen and (device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="splash_screens/iPhone_14_Pro_portrait.png">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="splash_screens/iPhone_13_mini__iPhone_12_mini__iPhone_11_Pro__iPhone_XS__iPhone_X_landscape.png">
@@ -57,6 +59,8 @@
     <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.14.0/dist/cdn.min.js" data-domain="www.josephuspaye.com"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/intersect@3.14.0/dist/cdn.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/focus@3.14.0/dist/cdn.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/anchor@3.14.0/dist/cdn.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.14.0/dist/cdn.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.0/dist/cdn.min.js"></script>
 
     <script defer src="/assets/js-wasm/zxing_reader.js"></script>
@@ -76,22 +80,22 @@
     </script>
 
   </head>
-  <body x-data="{ filter: { all: true }, 
-  showScanner: false, 
-  videoReady: false, 
-  showInstallModal: false,
-  top: true, 
-  noCamera: $persist(true), 
-  showQRModal: $persist(true), 
-  acceptPrivacy: $persist(false), 
-  hideInstallButton: $persist(false) }" 
-  class="{{page.bg-terra | append: 'z-0 bg-emerald-50 bg-fixed font-serif antialiased scroll-smooth' }}">
+
+  <body x-data="{ 
+                  filter: { all: true }, 
+                  showScanner: false, 
+                  videoReady: false, 
+                  showInstallModal: false,
+                  top: true,
+                  noCamera: $persist(true), 
+                  showQRModal: $persist(true), 
+                  acceptPrivacy: $persist(false), 
+                  hideInstallButton: $persist(false),
+                }" 
+        class="{{page.bg-terra | append: 'z-0 bg-emerald-50 bg-fixed font-serif antialiased scroll-smooth w-dvh h-dvh' }}">
     <div x-intersect:leave="top = false" x-intersect:enter="top = true"></div>
     {% include spinner.html %}
     {% include qr_modal.html %}
-    <div x-data="{ terrab: true }">
-      <div class="absolute top-0 w-screen h-0" x-intersect:leave="terrab = false" x-intersect="terrab = true"></div>
-      {{ content }}
-    </div>
+    <div>{{ content }}</div>
   </body>
 </html>
