Transition search to new card style

--- a/_includes/search_bar.html
+++ b/_includes/search_bar.html
@@ -7,7 +7,7 @@
   </div>
 
   <div x-data="{ capture: true }" class="flex flex-auto">
-    <input type="text" inputMode="text" id="search-input" x-trap="capture" size="3" autofocus class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
+    <input type="text" inputMode="text" aria-label="search the binder" id="search-input" x-trap="capture" size="3" autofocus class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
   </div>
 
 </div>
