--- a/_includes/search_bar_link.html
+++ b/_includes/search_bar_link.html
@@ -1,4 +1,4 @@
-<div class="flex flex-1 place-content-center place-self-center">
+<div class="flex sm:flex-1 place-content-center place-self-center">
 
   <a href="./search" class=" ml-auto my-auto" aria-label="Take me to the search page.">
     <svg class="h-10 w-10 stroke-2 stroke-kip-drk-sienna fill-transparent" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
