--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,10 @@
 
     {% if page.search %}
       {% include {{ page.search }} %}
+      {% if page.search == 'search_bar_link.html' %}
+        {% include filter.html %}
+        {% include install_pwa.html  %}
+      {% endif %}
       <button aria-label="Toggle QR Scanner">
         <svg xmlns="http://www.w3.org/2000/svg"
           @click="{{ site.data.templates.qr-click }}"
@@ -28,16 +32,13 @@
             transform="matrix(2.2069 0 0 2.2069 -606.216 -337.109)"/>
         </svg>
       </button>
+      {% include type_matchup.html %}
       {% include qr_scanner.html %}
-      {% if page.search == 'search_bar_link.html' %}
-        {% include filter.html %}
-        {% include install_pwa.html  %}
-      {% endif %}
     {% endif %}
 
 
     <div x-show="open" 
-        x-anchor.bottom-end="$refs.hamburger" 
+        x-anchor.bottom="$refs.hamburger" 
         x-transition.duration.350ms
         class="text-nowrap bg-amber-50 mt-2 h-fit w-fit py-3 px-1 rounded-md shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none">
       <div><a href="./" class="self-center p-2 text-center text-xl text-kip-drk-goldenrod rounded-lg hover:bg-amber-100 active:bg-amber-100">Binder Home</a></div>
