--- a/_includes/qr_modal.html
+++ b/_includes/qr_modal.html
@@ -13,7 +13,7 @@
          Breath easy, we don't collect any data.
       </p>
 
-      <button @click="acceptPrivacy = true; noCamera = false; showQRModal = false; showScanner = false" class="bg-kip-red hover:bg-emerald-600 text-amber-50 font-bold py-2 px-4 rounded">
+      <button @click="acceptPrivacy = true; noCamera = false; showQRModal = false; showScanner = false" class="{{ site.data.templates.red-btn }}">
         Accept & Continue
       </button>
 
