--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,6 +86,7 @@
                   showScanner: false, 
                   videoReady: false, 
                   showInstallModal: false,
+                  showKealModal: false,
                   top: true,
                   clearDamage: $persist([]),
                   noCamera: $persist(true), 
