--- a/_layouts/Species.html
+++ b/_layouts/Species.html
@@ -2,8 +2,10 @@
 layout: card
 ---
 {% capture mvmt %}Movement Range:  {{ page.movement }}{% endcapture %}
-{% capture tolerance %}Keal Means Tolerance:  {{ page.injury_tolerance }}{% endcapture %}
 {% include card_data_format.html data_title=mvmt %}
+
+{% include damage_tracker.html %}
+
 {% include card_data_format.html data_title=tolerance %}
 {% include card_data_format.html data_title='archetypal gene' play_data=page.genetic_disposition %}
 {% include card_data_format.html data_title='game effects' play_data=page.play_style %}
