--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,12 +1,12 @@
-<div x-show="{{ include.showCriteria }}" class="fixed inset-0 flex items-center justify-center z-50">
+<div x-show="{{ include.showCriteria }}" class="fixed top-0 left-0 right-0 h-screen w-screen inset-0 flex items-center justify-center z-40" x-cloak>
 
     <template x-if="true"> <!--This template makes sure the modal does not display when unneeded-->
-      <div class="absolute inset-0 bg-slate-300 opacity-75"></div>
+      <div class="z-40 absolute inset-0 bg-slate-300 opacity-75"></div>
     </template>
   
     <template x-if="true"> <!--This template makes sure the modal does not display when unneeded-->
       <div class="bg-amber-50 z-50 p-6 rounded-lg shadow-xl w-full max-w-lg">
-        <h2 class="text-xl font-semibold mb-4">{{ include.modalTitle }}</h2>
+        <h2 class="text-xl font-semibold mb-4 text-kip-drk-sienna">{{ include.modalTitle }}</h2>
         <p class="mb-4 text-kip-drk-sienna">
             {{ include.modalMessage }}
         </p>
