--- a/_includes/side_header.html
+++ b/_includes/side_header.html
@@ -1,76 +1,125 @@
-<div class="z-50 grid fixed top-0 right-0 mx-2 my-8 md:m-8">
+<!-- includes available
+qr_scanner
+type_matchup
+damage_tracker
+showCardInfo
+lastPage
+goHome
+-->
+
+<div class="z-40 grid fixed top-0 right-0 mx-2 my-8 md:m-8">
 
   {% capture anchor-menu %}
     {{ site.data.templates.anchor-menu }}
   {% endcapture %}
-  {% capture side-menu-class-binder %}
-    {{ site.data.templates.side-menu-class-binder }}
+
+  {% if include.whatever %}
+
+  {% endif %}
+
+  {{ include.color_stroke }}
+
+  {% capture base_stroke %}
+    {{ include.base_stroke }}
   {% endcapture %}
-  {% capture side-menu-svg-base %}
-    h-12 w-12 fill-slate-200 hover:fill-kip-red active:fill-kip-drk-sienna
+  {% capture base_fill %}
+    {{ include.base_fill }}
   {% endcapture %}
 
-  {% include qr_scanner.html 
-    classBinder=side-menu-class-binder 
-    buttonClass="flex justify-center" 
-    svgClass=side-menu-svg-base
-  %}
 
-  {% include type_matchup.html
-      menuClass=anchor-menu
-      buttonClass=side-menu-svg-base
-      classBinder=side-menu-class-binder
-  %}
+  {% if include.qr_scanner %}
+    {% include qr_scanner.html 
+      buttonClass="flex justify-center" 
+      svgClass='h-12 w-12 hover:fill-kip-red active:fill-kip-drk-sienna'
+      base_fill=base_fill
+    %}
+  {% endif %}
 
-  <button @click="showKealModal = !showKealModal" class="flex justify-center">
-    <svg xmlns="http://www.w3.org/2000/svg" 
-      viewBox="0 0 24 24" 
-      class="{{ side-menu-svg-base }}" {{ side-menu-class-binder }}>
-      <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904 9 18.75l-.813-2.846a4.5 4.5 0 0 0-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 0 0 3.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 0 0 3.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 0 0-3.09 3.09ZM18.259 8.715 18 9.75l-.259-1.035a3.375 3.375 0 0 0-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 0 0 2.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 0 0 2.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 0 0-2.456 2.456ZM16.894 20.567 16.5 21.75l-.394-1.183a2.25 2.25 0 0 0-1.423-1.423L13.5 18.75l1.183-.394a2.25 2.25 0 0 0 1.423-1.423l.394-1.183.394 1.183a2.25 2.25 0 0 0 1.423 1.423l1.183.394-1.183.394a2.25 2.25 0 0 0-1.423 1.423Z" />
-    </svg>    
-  </button>
+  {% if include.type_matchup %}
+    {% include type_matchup.html
+        svgClass='h-12 w-12 hover:fill-kip-red active:fill-kip-drk-sienna'
+        menuClass=anchor-menu
+        base_fill=base_fill
+    %}
+  {% endif %}
 
-  <button x-show="showCardInfo" aria-label="Show Background Image" class="flex justify-center">
-    <svg xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-      :class="landscape ? '' : 'lg:hidden'"
-      class="w-9 h-9 scale-95 fill-transparent hover:stroke-kip-red active:stroke-kip-drk-sienna stroke-slate-200 stroke-2 m-2"
-      @click="showCardInfo = !showCardInfo">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
-      <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-    </svg>
-  </button>
-  <template x-if="true">
+  {% if include.damage_tracker %}
+    <button @click="showKealModal = !showKealModal" class="flex justify-center">
+      <svg xmlns="http://www.w3.org/2000/svg" 
+        viewBox="0 0 24 24"
+        {% unless page.landscape %}
+          :class="'lg:fill-kip-goldenrod'"
+        {% endunless %}
+        class="h-12 w-12 {{ base_fill }} hover:fill-kip-red active:fill-kip-drk-sienna">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904 9 18.75l-.813-2.846a4.5 4.5 0 0 0-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 0 0 3.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 0 0 3.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 0 0-3.09 3.09ZM18.259 8.715 18 9.75l-.259-1.035a3.375 3.375 0 0 0-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 0 0 2.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 0 0 2.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 0 0-2.456 2.456ZM16.894 20.567 16.5 21.75l-.394-1.183a2.25 2.25 0 0 0-1.423-1.423L13.5 18.75l1.183-.394a2.25 2.25 0 0 0 1.423-1.423l.394-1.183.394 1.183a2.25 2.25 0 0 0 1.423 1.423l1.183.394-1.183.394a2.25 2.25 0 0 0-1.423 1.423Z" />
+      </svg>    
+    </button>
+    <!-- include here instead of damage_tracker.html for formatting consistency -->
+    {% include modal.html 
+      showCriteria='showKealModal' 
+      modalTitle='Clear Notice' 
+      modalMessage='You are about to reset the card status for the ENTIRE website. This feature is intended for use once a game is completed. Are your sure?'
+      acceptButtonText='Clear All Damage' 
+      acceptClick='clearDamage.push(true); showKealModal = !showKealModal'
+      denyButtonText="Don't Clear"
+      denyClick='showKealModal = !showKealModal'
+    %}
+  {% endif %}
+
+  {% if include.showCardInfo %}
+    <button x-show="showCardInfo" aria-label="Show Background Image" class="flex justify-center">
+      <svg xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        {% unless page.landscape %}
+          :class="'lg:hidden'"
+        {% endunless %}
+        class="w-9 h-9 scale-95 fill-transparent hover:stroke-kip-red active:stroke-kip-drk-sienna {{ base_stroke }} stroke-2 m-2"
+        @click="showCardInfo = !showCardInfo">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+      </svg>
+    </button>
+
     <button x-show="!showCardInfo" aria-label="Show game play data" class="flex justify-center">
       <svg xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
-        :class="landscape ? '' : 'lg:hidden'"
-        class="w-9 h-9 scale-95 fill-transparent hover:stroke-kip-red active:stroke-kip-drk-sienna stroke-slate-200 stroke-2 m-2"
+        {% unless page.landscape %}
+          :class="'lg:hidden'"
+        {% endunless %}
+        class="w-9 h-9 scale-95 fill-transparent hover:stroke-kip-red active:stroke-kip-drk-sienna {{ base_stroke }} stroke-2 m-2"
         @click="showCardInfo = !showCardInfo">
         <path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223A10.477 10.477 0 0 0 1.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.451 10.451 0 0 1 12 4.5c4.756 0 8.773 3.162 10.065 7.498a10.522 10.522 0 0 1-4.293 5.774M6.228 6.228 3 3m3.228 3.228 3.65 3.65m7.894 7.894L21 21m-3.228-3.228-3.65-3.65m0 0a3 3 0 1 0-4.243-4.243m4.242 4.242L9.88 9.88" />
       </svg>
     </button>
-  </template>
+  {% endif %}
 
-  <button aria-label="Go to last visited page" class="flex justify-center">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-      @click="window.history.back();"
-      :class="landscape ? '' : 'lg:stroke-kip-goldenrod'"
-      class="w-9 h-9 fill-transparent hover:stroke-kip-red active:stroke-kip-drk-sienna stroke-slate-200 stroke-2 m-2">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
-    </svg>
-  </button>
+  {% if include.lastPage %}
+    <button aria-label="Go to last visited page" class="flex justify-center">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        @click="window.history.back();"
+        {% unless page.landscape %}
+          :class="'lg:stroke-kip-goldenrod'"
+        {% endunless %}
+        class="w-9 h-9 fill-transparent hover:stroke-kip-red active:stroke-kip-drk-sienna {{ base_stroke }} stroke-2 m-2" {{ base_stroke }}>
+        <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
+      </svg>
+    </button>
+  {% endif %}
   
+  {% if include.goHome %}
   <a href="/" aria-label="Go to home page" class="flex justify-center">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24"
-      :class="landscape ? '' : 'lg:stroke-kip-goldenrod'"
-      class="w-9 h-9 fill-transparent hover:stroke-kip-red active:stroke-kip-drk-sienna stroke-slate-200 stroke-2 m-2">
+      {% unless page.landscape %}
+        :class="'lg:stroke-kip-goldenrod'"
+      {% endunless %}
+      class="w-9 h-9 fill-transparent hover:stroke-kip-red active:stroke-kip-drk-sienna {{ base_stroke }} stroke-2 m-2" {{ base_stroke }}>
         <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
     </svg>
   </a>
+  {% endif %}
 
 </div>
