JSON error hotfix and turn tracker polishing

--- a/_includes/install_pwa.html
+++ b/_includes/install_pwa.html
@@ -3,19 +3,9 @@
     window.addEventListener('beforeinstallprompt', (e) => {
     // Prevent the default behavior (which would be to show the install prompt automatically)
     e.preventDefault();
-    const promptTriggered = true;
     // Stash the event so it can be triggered later.
     deferredPrompt = e;
     });
-
-    function checkPWAStatus() {
-        try {
-            if (promptTriggered != null) { return false; } else { return true; }
-            //return false; //for development debugging
-        } catch (error) {
-            
-        }
-    }
 
     // Check if the deferred prompt isn't null, then show the prompt
     function handlePWAInstall() {
@@ -44,7 +34,7 @@ If you have not already installed our pwa, check if your browser (and launcher i
     
 </script>
 
-<button class="place-content-center" x-show="!hideInstallButton" x-init="$nextTick(() => { hideInstallButton = checkPWAStatus() });">
+<button class="place-content-center mb-2" x-show="!hideInstallButton" x-init="$nextTick(() => console.log(deferredPrompt))">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
         alt="install pwa icon" @click="showInstallModal = !showInstallModal"
         class="h-14 w-14 stroke-2 fill-none stroke-kip-goldenrod hover:stroke-kip-red active:stroke-kip-drk-sienna">
