--- a/_includes/turn_tracker.html
+++ b/_includes/turn_tracker.html
@@ -2,8 +2,11 @@
     <svg xmlns="http://www.w3.org/2000/svg" 
     @click="showTurnTracker = !showTurnTracker"
     x-ref="turnTracker"
-    viewBox="0 0 24 24" 
-    class="{{ include.base_stroke }}{{ include.base_fill }}{{ include.svgClass }}">
+    viewBox="0 0 24 24"
+    {% unless page.landscape %}
+        :class="'lg:stroke-kip-goldenrod'"
+    {% endunless %}
+    class="{{ include.base_stroke }}{{ include.svgClass }}">
         <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
     </svg>
 
@@ -11,15 +14,23 @@
     x-anchor.right-end.offset.10="$refs.turnTracker"
     x-transition.duration.350ms
     class="{{ include.menuClass }} grid grid-cols-1 h-fit w-40">
-        <div class="grid grid-cols-1" x-data="{ turnsToAlarm: 0 }">
-            <input type="number" name="turnsSelector" value="1" min="1" max="10" x-model="turnsToAlarm" class="mr-4"><label for="turnsSelector">Event Turns</label>
+        <div class="grid grid-cols-1" x-data="{ turnsToAlarm: 1 }">
+            <input type="range" name="turnsSelector" min="1" max="10" x-model="turnsToAlarm" class="mr-4"><label for="turnsSelector"><strong x-text="turnsToAlarm"></strong> Diel Cycles</label>
             <button aria-label="Submit turn timer" class="{{ site.data.templates.red-btn }} mr-4" @click="showTurnTracker = false; alarms.push(turnsToAlarm)">New Timer</button>
         </div>
     </div>
-    <div class="fixed top-0 left-0 m-6 grid grid-cols-1" x-transition x-show="alarms.length != 0" @click="alarms = alarms.map((alarm) => alarm - 1 ), alarms = alarms.filter((alarm) => alarm != -1)">
-        <p class="py-2 px-4 h-fit w-fit bg-amber-50 rounded-lg text-kip-drk-goldenrod mb-2 hover:bg-amber-100 select-none">Click here on each diel cycle roll</p>
-        <template x-for="alarm in alarms">
-            <div class="py-2 px-4 h-fit w-fit bg-amber-50 rounded-lg text-kip-drk-goldenrod mb-2 flex" x-transition><p x-show="alarm == 0">Event time Complete</p><p x-show="alarm != 0">Turns to Alarm: &#20</p><p x-show="alarm != 0" x-text="alarm"></p></div>
-        </template>
+    <div x-data="{showAlarms: $persist(true)}" class="fixed top-0 left-0 m-6 grid grid-cols-1" x-transition x-show="alarms.length != 0">
+        <div x-collapse x-show="showAlarms">
+            <p class="py-2 px-4 h-fit w-fit bg-amber-50 rounded-lg text-kip-drk-goldenrod mb-2 hover:bg-amber-100 select-none" @click="alarms = alarms.map((alarm) => alarm - 1 ), alarms = alarms.filter((alarm) => alarm != -1)">Click here on each diel cycle roll</p>
+            <template x-for="alarm in alarms">
+                <div class="py-2 px-4 h-fit w-fit bg-amber-50 rounded-lg text-kip-drk-goldenrod mb-2 flex" x-transition><p x-show="alarm == 0">Complete, click above to close</p><p x-show="alarm != 0">Turns to Alarm: <strong x-show="alarm != 0" x-text="alarm"></strong></p></div>
+            </template>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" alt="tools toggle"
+            @click="showAlarms = !showAlarms" :class="{ 'rotate-180': !showAlarms }" x-transition
+            class="fill-none stroke-2 {{ include.base_stroke }} w-6 h-6 mb-2 justify-left">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
+        </svg>
     </div>
+
 </div>
