--- a/_includes/side_header.html
+++ b/_includes/side_header.html
@@ -136,18 +136,17 @@ background_color
     {% endif %}
 
     {% if include.lastPage %}
-      <button aria-label="Go to last visited page" class="flex justify-center">
+      <a :href="previousURL" aria-label="Go to last visited page" class="flex justify-center">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
-          @click="window.history.back();"
           {% unless page.landscape %}
             :class="'lg:stroke-kip-goldenrod'"
           {% endunless %}
           class="w-9 h-9 fill-transparent z-auto hover:stroke-kip-red active:stroke-kip-drk-sienna {{ base_stroke }} stroke-2 m-2" {{ base_stroke }}>
           <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
         </svg>
-      </button>
+      </a>
     {% endif %}
     
     {% if include.goHome %}
