--- a/_includes/install_pwa.html
+++ b/_includes/install_pwa.html
@@ -7,6 +7,17 @@
     deferredPrompt = e;
     });
 
+    const timer = ms => new Promise(res => setTimeout(res, ms))
+
+    async function checkPWAInstallStatus() {
+        let i = 0;
+        while ( i < 10 ){
+            console.log(deferredPrompt);
+            await timer(1000);
+            i++;
+        }
+    }
+
     // Check if the deferred prompt isn't null, then show the prompt
     function handlePWAInstall() {
     if (deferredPrompt) {
@@ -34,7 +45,7 @@ If you have not already installed our pwa, check if your browser (and launcher i
     
 </script>
 
-<button class="place-content-center mb-2" x-show="!hideInstallButton" x-init="window.onload = function() { console.log(deferredPrompt); }">
+<button class="place-content-center mb-2" x-show="!hideInstallButton" x-init="checkPWAInstallStatus();">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
         alt="install pwa icon" @click="showInstallModal = !showInstallModal"
         class="h-14 w-14 stroke-2 fill-none stroke-kip-goldenrod hover:stroke-kip-red active:stroke-kip-drk-sienna">
