--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,13 +89,15 @@
                   showKealModal: false,
                   searchQuery: '',
                   top: true,
+                  previousURL: $persist(''),
+                  currentURL: $persist(''),
                   clearDamage: $persist([]),
                   noCamera: $persist(true), 
                   showQRModal: $persist(true), 
                   acceptPrivacy: $persist(false), 
                   hideInstallButton: $persist(false),
                 }" 
-        class="{{page.bg-terra | append: 'z-0 bg-emerald-50 bg-fixed font-serif antialiased scroll-smooth w-dvh h-dvh' }}">
+        class="{{page.bg-terra | append: 'z-0 bg-emerald-50 bg-fixed font-serif antialiased scroll-smooth w-dvh h-dvh' }}" x-init="previousURL = currentURL, currentURL = window.location.href">
     <div x-intersect:leave="top = false" x-intersect:enter="top = true"></div>
     {% include spinner.html %}
     <div>{{ content }}</div>
