--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
                   top: true,
                   previousURL: $persist(''),
                   currentURL: $persist(''),
-                  clearDamage: $persist([]),
+                  clearDamage: $persist('U7G789Rc'),
                   noCamera: $persist(true), 
                   showQRModal: $persist(true), 
                   acceptPrivacy: $persist(false), 
