--- a/_includes/install_pwa.html
+++ b/_includes/install_pwa.html
@@ -44,14 +44,15 @@ If you have not already installed our pwa, check if your browser (and launcher i
 }
     
 </script>
-
-<button class="place-content-center mb-2" x-show="!hideInstallButton" x-init="checkPWAInstallStatus();">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-        alt="install pwa icon" @click="showInstallModal = !showInstallModal"
-        class="h-14 w-14 stroke-2 fill-none stroke-kip-goldenrod hover:stroke-kip-red active:stroke-kip-drk-sienna">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
-    </svg>
-</button>
+<template x-if="true">
+    <button class="place-content-center mb-2" x-show="!hideInstallButton">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+            alt="install pwa icon" @click="showInstallModal = !showInstallModal"
+            class="h-14 w-14 stroke-2 fill-none stroke-kip-goldenrod hover:stroke-kip-red active:stroke-kip-drk-sienna">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+        </svg>
+    </button>
+</template>
 
 
 {% capture hideButton %}
